<resources>
    <string name="app_name">streetApp</string>
    <!-- Preference Titles -->
    <string name="preferences">Preferences</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="min">min</string>
    <string name="create">Create</string>
    <string name="type">Type</string>
    <string name="link_title">Link title</string>
    <string name="link">Link</string>
    <string name="add">Add</string>
    <string name="add_new_exercise">Add new exercise</string>
    <string name="number_of_repetition">Number of repetitions</string>
    <string name="add_link">Add link</string>
    <string name="search">search</string>
    <string name="description_label">Description:</string>
    <string name="approximate_training_time">Approximate training time:</string>
    <string name="exercises">Exercises</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="repetitions">repetitions</string>
    <string name="link_icon">link icon</string>
    <string name="cross_for_deleting_link">cross for deleting link</string>
    <string name="language">Language</string>
    <string name="black_theme">Black Theme</string>

    <string name="user_trainings">User trainings</string>
    <string name="settings">Settings</string>
    <string name="latest">Latest</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="training_details">Training Details</string>
    <string name="update">Update</string>
    <string name="update_training">Update training</string>
    <string name="create_training">Create training</string>
    <string name="create_exercise">Create exercise</string>
    <string name="update_exercise">Update exercise</string>
    <string name="language_changed">Language changed</string>
    <string name="hour_abbreviation">h</string>
    <string name="repetition_time">Repetition time:</string>
    <string name="second_abbreviation">s</string>
    <string name="series">Sets</string>
    <string name="how_do_you_want_to_do_your_training">How do you want to do your training?</string>
    <string name="all_sets_of_one_exercise_at_once">All sets of one exercise at once</string>
    <string name="exercise_in_series">Exercise in series</string>
    <string name="next_exercise">Next exercise</string>
    <string name="reps">Reps:</string>
    <string name="sets">Sets:</string>
    <string name="rep_time">Rep time:</string>
    <string name="next_set">Next set</string>
    <string name="backslash">/</string>
    <string name="favourites">Favourites</string>
    <string name="finish">Finish</string>
</resources>