<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.core.widget.NestedScrollView
    android:layout_height="wrap_content"
     android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.createTraining.CreateTraining">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/training_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/training_description_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="@+id/name_field"
            app:layout_constraintStart_toStartOf="@+id/name_field"
            app:layout_constraintTop_toBottomOf="@+id/name_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/training_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_new_exercise_button" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/training_type_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/training_type_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/links_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/training_type_layout" />


        <LinearLayout
            android:id="@+id/links_create_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/links_recycler_view">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/link_title_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/link_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/link_title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/link_url_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:hint="@string/link">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/link_url_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/training_link_add_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_link" />


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/exercises_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/links_create_layout" />


        <Button
            android:id="@+id/add_new_exercise_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_new_exercise"
            app:layout_constraintEnd_toEndOf="@+id/exercises_recycler_view"
            app:layout_constraintStart_toStartOf="@+id/exercises_recycler_view"
            app:layout_constraintTop_toBottomOf="@+id/exercises_recycler_view" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/training_description_layout">

            <TextView
                android:id="@+id/textView_minutes_shortcut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/min"
                app:layout_constraintBottom_toBottomOf="@+id/number_picker_minutes"
                app:layout_constraintStart_toEndOf="@+id/number_picker_minutes"
                app:layout_constraintTop_toTopOf="@+id/number_picker_minutes" />

            <NumberPicker
                android:id="@+id/number_picker_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/number_picker_hours"
                app:layout_constraintStart_toEndOf="@+id/textView_hour_shortcut"
                app:layout_constraintTop_toTopOf="@+id/number_picker_hours" />

            <TextView
                android:id="@+id/textView_hour_shortcut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/hour_abbreviation"
                app:layout_constraintBottom_toBottomOf="@+id/number_picker_hours"
                app:layout_constraintStart_toEndOf="@+id/number_picker_hours"
                app:layout_constraintTop_toTopOf="@+id/number_picker_hours" />

            <NumberPicker
                android:id="@+id/number_picker_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_label" />

            <TextView
                android:id="@+id/time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/approximate_training_time"
                app:layout_constraintEnd_toEndOf="@+id/textView_minutes_shortcut"
                app:layout_constraintStart_toStartOf="@+id/number_picker_hours"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</layout>